iptables/rules.v4
# Generated by iptables-save v1.6.0 on Sat Feb  3 12:27:24 2018
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [135:15273]
:OUTPUT ACCEPT [16256:980914]
-A INPUT -p udp -m state --state NEW -m udp --dport 123 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type any -j ACCEPT
-A INPUT -d 224.0.0.251/32 -p udp -m udp --dport 5353 -j ACCEPT
#-A INPUT -s 192.168.1.0/24 -d 192.168.1.0/24 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -m comment --comment ssh -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 25 -m comment --comment smtp -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m multiport --dports 53,953 -m comment --comment DNS -j ACCEPT
-A INPUT -p udp -m state --state NEW -m multiport --dports 53,953 -m comment --comment DNS -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m multiport --dports 80,443 -m comment --comment "http/https" -j ACCEPT
-A INPUT -p udp -m state --state NEW -m multiport --dports 80,443 -m comment --comment "http/https" -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 123 -j ACCEPT
-A INPUT -p udp -m state --state NEW -m udp --dport 123 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m multiport --dports 135,137,138,139,445 -m comment --comment samba -j ACCEPT
-A INPUT -p udp -m state --state NEW -m multiport --dports 135,137,138,139,445 -m comment --comment samba -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m multiport --dports 161,162 -m comment --comment "snmp/snmp-trap" -j ACCEPT
-A INPUT -p udp -m state --state NEW -m multiport --dports 161,162 -m comment --comment "snmp/snmp-trap" -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m multiport --dports 1663,1811,1865,8888 -m comment --comment kodi -j ACCEPT
-A INPUT -p udp -m state --state NEW -m multiport --dports 4992,9777 -m comment --comment kodi -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 514 -m comment --comment syslog -j ACCEPT
-A INPUT -p udp -m state --state NEW -m udp --dport 514 -m comment --comment syslog -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 631 -m comment --comment cups -j ACCEPT
-A INPUT -p udp -m state --state NEW -m udp --dport 631 -m comment --comment cups -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 1900 -j ACCEPT
-A INPUT -p udp -m state --state NEW -m udp --dport 1900 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 3306 -j ACCEPT
-A INPUT -p udp -m state --state NEW -m udp --dport 3306 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 5000 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 5351 -j ACCEPT
-A INPUT -p udp -m state --state NEW -m udp --dport 5351 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 5900 -j ACCEPT
-A INPUT -p udp -m state --state NEW -m udp --dport 5900 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 6600 -m comment --comment mpd -j ACCEPT
-A INPUT -p udp -m state --state NEW -m udp --dport 6600 -m comment --comment mpd -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 7337 -j ACCEPT
-A INPUT -p udp -m state --state NEW -m udp --dport 7337 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 7777 -j ACCEPT
-A INPUT -p udp -m state --state NEW -m udp --dport 7777 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8000 -j ACCEPT
-A INPUT -p udp -m state --state NEW -m udp --dport 8000 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8888 -m comment --comment "kodi httpd" -j ACCEPT
-A INPUT -p udp -m state --state NEW -m udp --dport 8888 -m comment --comment "kody httpd" -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 9090 -j ACCEPT
-A INPUT -p udp -m state --state NEW -m udp --dport 9090 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 9091 -j ACCEPT
-A INPUT -p udp -m state --state NEW -m udp --dport 9091 -j ACCEPT
-A INPUT -p udp -m state --state NEW -m udp --dport 9777 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m multiport --dports 42053,42054,42055 -j ACCEPT
-A INPUT -p udp -m state --state NEW -m multiport --dports 42053,42054,42055 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 51413 -j ACCEPT
-A INPUT -p udp -m state --state NEW -m udp --dport 51413 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 52053 -j ACCEPT
-A INPUT -p udp -m state --state NEW -m udp --dport 52053 -j ACCEPT
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "IPTables-Dropped: "
-A INPUT -j DROP
-A FORWARD -i wlan0 -j ACCEPT
COMMIT
# Completed on Sat Feb  3 12:27:24 2018
# Generated by iptables-save v1.6.0 on Sat Feb  3 12:27:24 2018
*nat
:PREROUTING ACCEPT [15:916]
:INPUT ACCEPT [6:400]
:OUTPUT ACCEPT [62:4653]
:POSTROUTING ACCEPT [12:919]
-A POSTROUTING -o wlan0 -j MASQUERADE
COMMIT
# Completed on Sat Feb  3 12:27:24 2018
